--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "aos": "^2.3.4",
     "i18next": "^23.15.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "keen-slider": "^6.8.6",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/aos": "^3.0.7",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
